--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>Rajdeep Saha</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/superslides.css">
         <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -41,6 +43,7 @@
                         <img class="aboutImage" src="img/about.jpg">
                     </div>
                     <div class="col-md-7 align-self-center">
+                        <br>
                         <h4>My name is Rajdeep Saha</h4>
                         <p>
                             I was born in Kolkata, India and grew up playing cricket & football in the narrow lanes of the city.
@@ -112,7 +115,72 @@
                 </div>
             </div>
         </div>
+        <div id="stats" class="statsSection section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                                <h2>STATISTICS</h2>
+                                <p>My experience & projects summed up in numbers</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="squareItem">
+                            <div class="squareInnerContainer">
+                                <div class="squareIcon">
+                                    <i class="fa fa-code"></i>
+                                </div>
+                                <div class="squareContent">
+                                    <h2><span class="counter">100</span><span>+</span></h2>
+                                    <h3>Code Submissions</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-3 col-sm-6">
+                        <div class="squareItem">
+                            <div class="squareInnerContainer">
+                                <div class="squareIcon">
+                                    <i class="fa fa-bug"></i>
+                                </div>
+                                <div class="squareContent">
+                                    <h2 class="counter">&infin;</h2>
+                                    <h3>Lines Debugged</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                            <div class="squareItem">
+                                <div class="squareInnerContainer">
+                                    <div class="squareIcon">
+                                        <i class="fa fa-laptop"></i>
+                                    </div>
+                                    <div class="squareContent">
+                                        <h2 class="counter">5</h2>
+                                        <h3>Projects</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="squareItem">
+                            <div class="squareInnerContainer">
+                                <div class="squareIcon">
+                                    <i class="fa fa-trophy"></i>
+                                </div>
+                                <div class="squareContent">
+                                        <h2><span class="counter">10</span><span>+</span></h2>
+                                    <h3>Certifications</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <script src="js/countUp.js"></script>
+        <script src="js/countUp-jquery.js"></script>
         <script src="js/jquery.superslides.min.js"></script>
         <script src="js/jquery.easypiechart.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
