--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                     <div class="item">
                                         <img src="img/portfolio/thumbnails/p2.png">
                                         <div class="icons">
-                                            <a href="img/portfolio/thumbnails/p2.png" title="View" class="openButton" data-fancybox data-caption="Built a chatbot for Dexterity Global using Dialogflow">
+                                            <a href="img/portfolio/p2.png" title="View" class="openButton" data-fancybox data-caption="Built a chatbot for Dexterity Global using Dialogflow">
                                                 <i class="fa fa-eye"></i>
                                             </a>
                                             <a href="https://bot.dialogflow.com/dexteritybot" target="_blank" class="projectLink">
@@ -340,7 +340,7 @@
                                     <div class="item">
                                         <img src="img/portfolio/thumbnails/p3.png">
                                         <div class="icons">
-                                            <a href="img/portfolio/thumbnails/p3.png" title="View" class="openButton" data-fancybox data-caption="Built a simple program for vehicle detection using centroid estimation on Python">
+                                            <a href="img/portfolio/p3.png" title="View" class="openButton" data-fancybox data-caption="Built a simple program for vehicle detection using centroid estimation on Python">
                                                 <i class="fa fa-eye"></i>
                                             </a>
                                             <a href="https://github.com/SkyrimCode/VehicleDetector" target="_blank" class="projectLink">
@@ -354,7 +354,7 @@
                                     <div class="item">
                                         <img src="img/portfolio/thumbnails/p4.png">
                                         <div class="icons">
-                                            <a href="img/portfolio/thumbnails/p4.png" title="View" class="openButton" data-fancybox data-caption="Portfolio Website built using Bootstrap, Javascript & JQuery">
+                                            <a href="img/portfolio/p4.png" title="View" class="openButton" data-fancybox data-caption="Portfolio Website built using Bootstrap, Javascript & JQuery">
                                                 <i class="fa fa-eye"></i>
                                             </a>
                                             <a href="http://skyrimcode.github.io" target="_blank" class="projectLink">
@@ -368,7 +368,7 @@
                                     <div class="item">
                                         <img src="img/portfolio/thumbnails/p1.png">
                                         <div class="icons">
-                                            <a href="img/portfolio/thumbnails/p1.png" title="View" class="openButton" data-fancybox data-caption="Used Bootstrap4, JQuery & SASS to build the frontend of a Restaurant System">
+                                            <a href="img/portfolio/p1.png" title="View" class="openButton" data-fancybox data-caption="Used Bootstrap4, JQuery & SASS to build the frontend of a Restaurant System">
                                                 <i class="fa fa-eye"></i>
                                             </a>
                                             <a href="https://skyrimcode.github.io/Restaurant/" target="_blank" class="projectLink">
@@ -382,7 +382,7 @@
                                     <div class="item">
                                         <img src="img/portfolio/thumbnails/p5.jpg">
                                         <div class="icons">
-                                            <a href="img/portfolio/thumbnails/p5.jpg" title="View" class="openButton" data-fancybox data-caption="Final Year Project to identify the currency denomination using Deep Learning">
+                                            <a href="img/portfolio/p5.jpg" title="View" class="openButton" data-fancybox data-caption="Final Year Project to identify the currency denomination using Deep Learning">
                                                 <i class="fa fa-eye"></i>
                                             </a>
                                             <a href="" target="_blank" class="projectLink">
@@ -394,9 +394,9 @@
                             </li>
                             <li onclick="" class="education col-6 col-sm-4 col-md-3 col-lg-3">
                                     <div class="item">
-                                        <img src="img/portfolio/nes.jpg">
+                                        <img src="img/portfolio/thumbnails/nes.jpg">
                                         <div class="icons" style="padding-left:10%;">
-                                            <a href="img/portfolio/nes.jpg" title="View Image" class="openButton" data-fancybox data-caption="Completed my Elementary schooling from National English School">
+                                            <a href="img/portfolio/thumbnails/nes.jpg" title="View Image" class="openButton" data-fancybox data-caption="Completed my Elementary schooling from National English School">
                                                 <i class="fa fa-eye" style="position: relative;"></i>
                                             </a>
                                         </div>
@@ -405,9 +405,9 @@
                                </li>
                                <li onclick="" class="education col-6 col-sm-4 col-md-3 col-lg-3">
                                 <div class="item">
-                                    <img src="img/portfolio/bgkv.jpg">
+                                    <img src="img/portfolio/thumbnails/bgkv.jpg">
                                     <div class="icons" style="padding-left: 10%;">
-                                        <a href="img/portfolio/bgkv.jpg" title="View Image" class="openButton" data-fancybox data-caption="Finished my high school from BGKV,Salt Lake">
+                                        <a href="img/portfolio/thumbnails/bgkv.jpg" title="View Image" class="openButton" data-fancybox data-caption="Finished my high school from BGKV,Salt Lake">
                                             <i class="fa fa-eye" style="position: relative;"></i>
                                         </a>
                                     </div>
@@ -416,9 +416,9 @@
                            </li>
                            <li onclick="" class="education col-6 col-sm-4 col-md-3 col-lg-3">
                                 <div class="item">
-                                    <img src="img/portfolio/bppimt.png">
+                                    <img src="img/portfolio/thumbnails/bppimt.png">
                                     <div class="icons" style="padding-left: 10%;">
-                                        <a href="img/portfolio/bppimt.png" title="View Image" class="openButton" data-fancybox data-caption="Pursuing B.Tech in Computer Science & Engineering from B.P. Poddar Institute of Management & Technology">
+                                        <a href="img/portfolio/thumbnails/bppimt.png" title="View Image" class="openButton" data-fancybox data-caption="Pursuing B.Tech in Computer Science & Engineering from B.P. Poddar Institute of Management & Technology">
                                             <i class="fa fa-eye" style="position: relative;"></i>
                                         </a>
                                     </div>
@@ -429,7 +429,7 @@
                                 <div class="item">
                                     <img src="img/portfolio/thumbnails/DP.jpeg">
                                     <div class="icons" style="padding-left: 10%;">
-                                        <a href="img/portfolio/thumbnails/DP.jpeg" title="View Image" class="openButton" data-fancybox data-caption="Clicked at Khandagiri Caves,Odisha">
+                                        <a href="img/portfolio/DP.jpeg" title="View Image" class="openButton" data-fancybox data-caption="Clicked at Khandagiri Caves,Odisha">
                                             <i class="fa fa-eye" style="position: relative;"></i>
                                         </a>
                                     </div>
@@ -440,7 +440,7 @@
                                 <div class="item">
                                     <img src="img/portfolio/thumbnails/DP2.jpg">
                                     <div class="icons" style="padding-left: 10%;">
-                                        <a href="img/portfolio/thumbnails/DP2.jpg" title="View Image" class="openButton" data-fancybox data-caption="Vibing at Puri Beach">
+                                        <a href="img/portfolio/DP2.jpg" title="View Image" class="openButton" data-fancybox data-caption="Vibing at Puri Beach">
                                             <i class="fa fa-eye" style="position: relative;"></i>
                                         </a>
                                     </div>
@@ -451,7 +451,7 @@
                                 <div class="item">
                                     <img src="img/portfolio/thumbnails/DP3.jpg">
                                     <div class="icons" style="padding-left: 10%;">
-                                        <a href="img/portfolio/thumbnails/DP3.jpg" title="View Image" class="openButton" data-fancybox data-caption="Chilling in Manali, Himachal Pradesh">
+                                        <a href="img/portfolio/DP3.jpg" title="View Image" class="openButton" data-fancybox data-caption="Chilling in Manali, Himachal Pradesh">
                                             <i class="fa fa-eye" style="position: relative;"></i>
                                         </a>
                                     </div>
@@ -462,7 +462,7 @@
                                 <div class="item">
                                     <img src="img/portfolio/thumbnails/DP4.jpg">
                                     <div class="icons" style="padding-left: 10%;">
-                                        <a href="img/portfolio/thumbnails/DP4.jpg" title="View Image" class="openButton" data-fancybox data-caption="Historic Day at Wagah Border">
+                                        <a href="img/portfolio/DP4.jpg" title="View Image" class="openButton" data-fancybox data-caption="Historic Day at Wagah Border">
                                             <i class="fa fa-eye" style="position: relative;"></i>
                                         </a>
                                     </div>
