--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
+            <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png" height="30" width="41"></a>
             <div class="collapse justify-content-center navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -208,17 +209,17 @@
                 </div>
             </div>
         </div>
+        <div class="portfolioheading">
+            <h2>PORTFOLIO</h2>
+        </div>
         <div id="portfolio" class="section">
             <div class="container">
                 <div class="row">
-                   <div class="heading portfolioheading">
-                       <h2>PORTFOLIO</h2>
-                   </div>
                    <div class="filter">
                        <ul id="filters">
                            <li><a href="#" data-filter="*" class="current">ALL</a></li>
-                           <li><a href="#" data-filter=".certifications">CERTIFICATIONS</a></li>
                            <li><a href="#" data-filter=".projects">PROJECTS</a></li>
+                           <li><a href="#" data-filter=".certifications">CERTIFICATIONS</a></li>
                            <li><a href="#" data-filter=".me">ME</a></li>
                        </ul>
                    </div>
@@ -229,7 +230,7 @@
                             <li onclick="" class="certifications col-6 col-sm-4 col-md-3 col-lg-3">
                                     <div class="item">
                                         <img src="img/portfolio/thumbnails/jp.png">
-                                        <div class="icons" style="padding-left: 10%;">
+                                        <div class="icons" style="padding-left: 10px;">
                                             <a href="img/portfolio/docs/JPMC.pdf" title="View" class="openButton" data-fancybox data-caption="Worked on an interface with a stock price data feed by
                                             implementing JPMC framework Perspective for data visualization.  Technologies Used : React,Perspective">
                                                 <i class="fa fa-eye" style="position: relative;"></i>
