--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Rajdeep Saha</title>
+        <link rel = "icon" href =  "img/logo.png" type = "image/png"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <!-- build:css css/main.css -->
         <link rel="stylesheet" type="text/css" href="css/superslides.css">
         <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- endbuild -->
     </head>
     <body>
+        <div class="boot">
+            <div class="inner"></div>
+        </div>
         <div id="slides">
             <div class="overlay"></div>
 
@@ -42,7 +47,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png" height="30" width="41"></a>
+            <a class="navbar-brand" href="#"><img id="logo" src="img/logow.png" height="30" width="41"></a>
             <div class="collapse justify-content-center navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -466,7 +471,7 @@
         <div id="contact" class="contactSection section">
                 <div class="col-md-12 text-center">
                     <p class="subHeading">Interested to know more?</p>
-                    <h2>I'd love to hear from you</h2>
+                    <h4>I'd love to hear from you</h4>
                     <a href="mailTo:rsaha734@gmail.com" class="contactButton">GET IN TOUCH</a>
                 </div>
                 <div class="links">
@@ -485,7 +490,8 @@
                 <p>All rights reserved.</p>
             </div>
         </div>
-
+         <!-- build:js js/main.js -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="js/countUp.js"></script>
         <script src="js/countUp-jquery.js"></script>
         <script src="js/jquery.superslides.min.js"></script>
@@ -497,5 +503,6 @@
         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
         <script src="js/script.js"></script>
+        <!-- endbuild -->
     </body>
 </html>
