--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <title>Rajdeep Saha</title>
         <link rel = "icon" href =  "img/logo.png" type = "image/png"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168665903-1"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-168665903-1');
+        </script>
          <!-- build:css css/main.css -->
         <link rel="stylesheet" type="text/css" href="css/superslides.css">
         <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
