--- a/index.html
+++ b/index.html
@@ -94,13 +94,14 @@
                         <h1 class="bebas">My name is Rajdeep Saha</h1>
                         <p class='montserrat'>
                             I was born in Kolkata, India and grew up playing cricket in the narrow lanes of the city.
-                            I have an avid interest in software development and spend my weekends mostly on my laptop working on personal projects. 
-                            I am technically skilled in Javascript, C++,
-                             Python, MongoDB, MySQL, React, Angular, Docker, Kubernetes to name a few. Some of my favourite projects include building CoWin (COVID Vaccine Slot Finder)
+                            I developed a keen interest towards Computer Science in my high school days and have since then harnessed it to help 
+                            various firms tackle complex problems.
+                            Although my learning never ends, I have decent expertise working in Javascript, C++, Springboot,
+                             Python, MongoDB, MySQL, React, Angular, Docker, Kubernetes to name a few. Some of my favourite personal projects include building CoWin (COVID Vaccine Slot Finder)
                               and Instagram Clone.
                             
                         </p>
-                        <p class="montserrat">I have completed my Bachelor's (B.Tech) in Computer Science & Engineering. I currently have an experience of 1+ years working as a Software Developer. 
+                        <p class="montserrat">I have completed my Bachelor's (B.Tech) in Computer Science & Engineering. I currently have an experience of 3+ years working as a Software Developer. 
                         </p>
                     </div>
                 </div>
@@ -138,15 +139,15 @@
                                     <canvas height="152" width="152"></canvas>
                                 </span>
                                 <h4>React</h4>
-                                <p>Javascript Library for frontend development</p>
+                                <p>Javascript Library for frontend projects</p>
                         </div>   
                         <div class="skill">
                                 <span class="chart" data-percent="50%">
                                     <span class="percent">50</span>
                                     <canvas height="152" width="152"></canvas>
                                 </span>
-                                <h4>Python</h4>
-                                <p>Powerful language used in many of my projects from ML to Computer Vision</p>
+                                <h4>Java</h4>
+                                <p>Professional working experience with Springboot</p>
                         </div>    
                         <div class="skill">
                             <span class="chart" data-percent="80%">
@@ -460,7 +461,7 @@
                         <p class="Sign">Coded with &hearts; by <a href="https://github.com/SkyrimCode" class="gh" target="_blank" rel="noopener">Rajdeep Saha</a></p>
                     </div>
             <div class="col-md-12 text-center">
-                <p>&copy; Copyright Rajdeep Saha 2022.</p>
+                <p>&copy; Copyright Rajdeep Saha.</p>
                 <p>All rights reserved.</p>
             </div>
         </div>
